--- a/1.html
+++ b/1.html
@@ -12,15 +12,24 @@
 </ol>
 
 <h2>SW's HTML</h2>
+<p>
+  <iframe width="560" height="315"
+  src="https://www.youtube.com/embed/AYnv0B9uPRk"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+   allowfullscreen></iframe>
+</p>
 <strong>Start : 2021 05 17 </strong>
 <br><u>To be a better programmer</u>
 <p>Do my best whatever you want</p>
 <p><a href="https://www.w3.org/TR/html5/" target="_blank"
 title="html5 specification">Hypertext Markup Language (HTML)</a></p>
 <img src = "interstellar_410e_1920x1080.jpg" width = "50%">
-  
-  
-  <p>
+
+<!--> 댓글 기능 추가 <-->
+
+<p>
 
   <div id="disqus_thread"></div>
   <script>
@@ -43,6 +52,20 @@ title="html5 specification">Hypertext Markup Language (HTML)</a></p>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
 </p>
-  
+<!-- 채팅 기능 추가 -->
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/60b081496699c7280da95c7e/1f6oni2gl';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+
 </body>
 </html>
