--- a/1.html
+++ b/1.html
@@ -2,6 +2,17 @@
 <head>
 <title>SW's Self HTML Study Page</title>
 <meta charset="utf-8">
+  <!-- 방문자 분석 기능 -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q8J0JCSVGT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q8J0JCSVGT');
+</script>
+
 </head>
 <body>
 <h1><a href = "index.html">WEB</a><h1>
