--- a/1.html
+++ b/1.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8">
   <!-- 방문자 분석 기능 -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q8J0JCSVGT"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LYWES7VZZT"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-Q8J0JCSVGT');
+  gtag('config', 'G-LYWES7VZZT');
 </script>
 
 </head>
