--- a/1.html
+++ b/1.html
@@ -2,28 +2,41 @@
 <head>
 <title>SW's Self HTML Study Page</title>
 <meta charset="utf-8">
-  <!-- 방문자 분석 기능 -->
+
+<!-- 방문자 분석 기능 -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LYWES7VZZT"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q8J0JCSVGT"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-LYWES7VZZT');
+  gtag('config', 'G-Q8J0JCSVGT');
 </script>
+
+<link rel="stylesheet" href="style.css">
+
 
 </head>
 <body>
-<h1><a href = "index.html">WEB</a><h1>
+<h1><a href = "index.html">WEB</a></h1>
+  <div id = "grid">
 <ol>
-<li><a href = "1.htm1"></a>1. HTML</li>
-<li><a href = "2.html"></a>2. CSS</li>
+  <li><a href="1.html">HTML</a></li>
+  <li><a href="2.html">CSS</a></li>
+  <li><a href="3.html">JavaScript</a></li>
+</ol>
+<!--
+<h1><a href = "index.html"><font color ="red">WEB</font></a><h1>
+<ol>
+<li><a href = "1.htm1"></a>1. <font color ="red">HTML</font></li>
+<li><a href = "2.html"></a>2. <font color ="red">CSS</font></li>
 <li><a href = "3.html"></a>3. JavaScript</li>
 </ol>
-
+-->
 <h2>SW's HTML</h2>
 <p>
+    <div id = "article">
   <iframe width="560" height="315"
   src="https://www.youtube.com/embed/AYnv0B9uPRk"
   title="YouTube video player"
@@ -37,6 +50,9 @@
 <p><a href="https://www.w3.org/TR/html5/" target="_blank"
 title="html5 specification">Hypertext Markup Language (HTML)</a></p>
 <img src = "interstellar_410e_1920x1080.jpg" width = "50%">
+
+
+
 
 <!-- 댓글 기능 추가 -->
 
@@ -77,6 +93,7 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
-
+</div>
+</div>
 </body>
 </html>
